Day5/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  podSelector: {}      # 네임스페이스 내 모든 Pod 대상
  policyTypes:
  - Ingress
  - Egress
